src/pages/home/home.css
canvas{
  width: 100%;
  margin: 0 auto;
  padding: 0;
}
.container {
  max-width: 80%;
  margin: 0 auto;
  padding: 0 50px;
}

  .hero {
    width: 100%;
    height: 100vh;
    margin: 0 auto;
    display: grid;
    place-items: center;
    text-align: center;
  }
  
  h1 {
    font-family: "Zaslia";
    font-size: 10rem;
    user-select: none;
}

/* Mobile only (max-width: 767px) */
@media only screen and (max-width: 767px) {
  /* styles for mobile devices */
  h1 {
   
    font-size: 3em;

}
}

